--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -2,3 +2,9 @@
 <p>Find me in app/views/notes/top.html.erb</p>
 
 <h1 class="jquery">Hello jQuery!</h1>
+
+<p>人生に役立つ情報をまとめるサイト</p>
+<p>wikipediaみたいな感じ</p>
+<p>ジャンル別に分ける</p>
+<p>検索機能つける</p>
+<p>ジャンル検索もつける</p>
