--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -10,3 +10,6 @@
 <p>ジャンル検索もつける</p>
 <p>vue.js react あたり使う</p>
 <p>検索は非同期で何件あるか分かるようにしたい</p>
+<p>情報源のリンク先貼れるようにする</p>
+<p>タイトル、本文（複数追加できるようにする）</p>
+<p>聖杯レイアウト、左側にジャンル検索、ヘッダーに検索バー、右側に何かしら</p>
