--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -13,3 +13,5 @@
 <p>情報源のリンク先貼れるようにする</p>
 <p>タイトル、本文（複数追加できるようにする）</p>
 <p>聖杯レイアウト、左側にジャンル検索、ヘッダーに検索バー、右側に何かしら</p>
+<p>ジャンルごとに何件か表示させる（ジャンル検索）</p>
+<p>DB:ジャンル（name）、本文（title,introduction,参考文献）</p>
