--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -1,5 +1,7 @@
-<h1>Notes#top</h1>
-<p>Find me in app/views/notes/top.html.erb</p>
+<% @notes.each do |note|%>
+  <%= note.title %>
+  <%= note.introduction %>
+<% end %>
 
 <h1 class="jquery">Hello jQuery!</h1>
 
