--- a/app/views/sentences/new.html.erb
+++ b/app/views/sentences/new.html.erb
@@ -1,1 +1,14 @@
-<h1>new</h1>
+<h2>ジャンル</h2>
+<p>セレクトボックスで選べるようにする</p>
+  <%= form_with model: @sentence, url: sentences_path do |f| %>
+    <div class="form-group">
+      <%= f.text_field :title, autofocus: true, placeholder: 'タイトル', class: "form-control a", id: "text" %>
+    </div>
+    <div class="form-group">
+      <%= f.text_area :introduction, placeholder: '投稿内容を入力してください', class: "form-control", size: "40x10" %>
+    </div>
+    </div><div class="form-group">
+      <%= f.text_area :references, placeholder: '参考文献(リンク先)', class: "form-control", size: "40x10" %>
+    </div>
+      <%= f.submit "投稿する", class: "btn btn-outline-success btn-block btn-success size" %>
+  <% end %>
