--- a/app/views/sentences/show.html.erb
+++ b/app/views/sentences/show.html.erb
@@ -1,1 +1,7 @@
 <h1>show</h1>
+<h1>タイトル</h1>
+<%= @sentence.title %>
+<h1>説明？本文？</h1>
+<%= @sentence.introduction %>
+<h1>参考文献</h1>
+<%= @sentence.references %>
