--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -4,10 +4,10 @@
      <p>ジャンル検索</p>
     </div>
     <div class="col-md-8 col-12 mt-5">
-      <% @notes.each do |note|%>
-        <%= note.title %>
-        <%= note.introduction %>
-      <% end %>
+      <%# @notes.each do |note|%>
+        <%# note.title %>
+        <%# note.introduction %>
+      <%# end %>
 
       <h1 class="jquery">Hello jQuery!</h1>
 
