--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -14,6 +14,12 @@
       <p>人生に役立つ情報をまとめるサイト</p>
       <p>wikipediaみたいな感じ</p>
       <p>ジャンル別に分ける</p>
+      <div>
+        <p>ヘッダー</p>
+        <p>検索機能</p>
+        <p>Note(アプリ名)</p>
+        <p>それぞれの機能のリンク</p>
+      </div>
       <p>検索機能つける</p>
       <p>ジャンル検索もつける</p>
       <p>vue.js react あたり使う</p>
@@ -23,6 +29,10 @@
       <p>聖杯レイアウト、左側にジャンル検索、ヘッダーに検索バー、右側に何かしら</p>
       <p>ジャンルごとに何件か表示させる（ジャンル検索）</p>
       <p>DB:ジャンル（name）、本文（title,introduction,参考文献）</p>
+      <div>
+        <p>show</p>
+        <p>アンカーつけて移動させる</p>
+      </div>
     </div>
     <div class="col-md-2">
     </div>
