--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,36 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark top-navigation">
+      <div class="container">
+        <h2><%# link_to "Note", root_path, class: "navbar-brand" %></h2>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="search-form">
+          <%# form_with url: search_path, method: :get, local: true do |f| %>
+            <%# f.text_field :keywords, class: "search_form", placeholder: "キーワードで検索", class: "rounded a", size: "40x50"%>
+            <%# f.submit '検索', class: "rounded btn btn-primary" %>
+          <%# end %>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <%# link_to "マイページ", information_path(current_user.id), class: "text-white" %>
+            </li>
+            <li class="nav-item">
+              <%# link_to "SNS相談", posts_path, class: "text-white" %>
+            </li>
+            <li class="nav-item">
+              <%# link_to "お問い合わせ", new_contact_path, class: "text-white" %>
+            </li>
+            <li class="nav-item">
+              <%# link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-white" %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
