Change the text on the top page

--- a/app/views/notes/top.html.erb
+++ b/app/views/notes/top.html.erb
@@ -31,7 +31,7 @@
       <p>DB:ジャンル（name）、本文（title,introduction,参考文献）</p>
       <div>
         <p>show</p>
-        <p></p>
+        <p>チームラボの開発課題にする、24日まで</p>
       </div>
     </div>
     <div class="col-md-2">
